sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: not found: value T
    while (T(i)<T(j) && j>0){
           ^AlgBubbleSort1:7: error: not found: value T
    while (T(i)<T(j) && j>0){
                ^AlgBubbleSort1:11: error: not found: value T
  return T
         ^AlgBubbleSort1:11: warning: enclosing method bubbleSort has result type Unit: return value discarded
  return T
  ^